<resources>
    <string name="app_name">Practica 1 ADD</string>
    <string name="str_Sync">Sincronizar</string>
    <string name="str_setting">Configuracion</string>
    <string name="str_about">Acerca de ...</string>
    <string name="str_version">Version de app: 1.0.1</string>
    <string name="str_lastconnect">Ultima conexion realizada:</string>
    <string name="str_conexion">lastconnect</string>
    <string name="str_ActSync">Activar sincronizacion</string>
    <string name="str_DescSync">Desactivar sincronizacion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_plus">+</string>
    <string name="str_menos">-</string>
    <string name="str_nobre">Nombre </string>
    <string name="str_primertelf">Primer telefono </string>
    <string name="str_ordenar_az">Ordenar A-Z </string>
    <string name="str_ordenar_za">Ordenar Z-A </string>
    <string name="str_borrar">Borrar</string>
    <string name="str_editar">Editar</string>
    <string name="str_insertar">Nuevo</string>
    <string name="str_alltelf">Todos los telefonos</string>
    <string name="title_activity_insert">Insert</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_telefono">Telefono</string>
    <string name="str_agregar">Agregar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_segundotelf">Segundo telefono</string>
    <string name="str_tercerotelf">Tercer Telefono</string>
    <string name="str_auto">Sincronizacion automatica</string>
    <string name="str_tiposinc">Absoluta</string>
    <string name="str_tiposinc2">Parcial</string>
    <string name="str_aceptar">Aceptar</string>
</resources>
